--- a/info-johto/johto.css
+++ b/info-johto/johto.css
@@ -301,3 +301,426 @@ audio::-webkit-media-controls-fast-forward-button {
         max-width: 50px;
     }
 }
+
+
+/* GROUND AND WATER location */
+#locations {
+
+    .b-15,
+    .c-4,
+    .c-5,
+    .c-6,
+    .c-7,
+    .c-8,
+    .c-9,
+    .c-10,
+    .c-11,
+    .c-12,
+    .c-13,
+    .c-14,
+    .c-15,
+    .c-16,
+    .c-17,
+    .c-18,
+    .d-4,
+    .d-9,
+    .d-18,
+    .e-2,
+    .e-3,
+    .e-4,
+    .e-7,
+    .e-8,
+    .e-9,
+    .e-10,
+    .e-11,
+    .e-12,
+    .e-13,
+    .e-14,
+    .e-18,
+    .f-7,
+    .f-12,
+    .f-14,
+    .f-18,
+    .g-7,
+    .g-12,
+    .g-14,
+    .g-17,
+    .g-18,
+    .h-7,
+    .h-12,
+    .h-14,
+    .h-17,
+    .i-7,
+    .i-12,
+    .i-14,
+    .i-17,
+    .j-1,
+    .j-7,
+    .j-12,
+    .j-14,
+    .j-15,
+    .j-16,
+    .j-17,
+    .j-18,
+    .j-19,
+    .j-20,
+    .k-7,
+    .k-12,
+    .l-7,
+    .l-12,
+    .m-7,
+    .m-8,
+    .m-9,
+    .m-10,
+    .m-11,
+    .m-12 {
+        background-color: rgb(220, 183, 151);
+        z-index: 1;
+        opacity: 1;
+    }
+
+
+    .a-15,
+    .f-2,
+    .g-2,
+    .h-2,
+    .i-2,
+    .j-2 {
+        background-color: rgb(31, 188, 208);
+        z-index: 1;
+        opacity: 1;
+    }
+}
+
+#locations {
+
+    width: 100%;
+    z-index: 2;
+    backdrop-filter: blur(3px);
+
+    background-color: rgba(15, 15, 15, 0.396);
+    border: 10px solid rgb(41, 62, 167);
+    border-radius: 8px;
+    box-shadow: 3px 3px 9px rgba(45, 45, 45, 0.508);
+
+    display: grid;
+    place-items: center;
+    padding: 25px;
+    margin-top: 2rem;
+
+    @media (max-width: 768px) {
+        padding: 3px;
+
+        display: none;
+    }
+
+    >div {
+        display: flex;
+
+        >div {
+            display: grid;
+            place-items: center;
+
+            width: 30px;
+            height: 30px;
+            background-color: transparent;
+            font-size: 12px;
+
+            position: relative;
+
+        }
+    }
+
+    #C-9,
+    #C-15,
+    #C-18,
+    #E-4,
+    #E-12,
+    #M-9,
+    #J-1,
+    #J-14,
+    #J-20 {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 27px;
+        height: 27px;
+        background-color: rgb(193, 94, 94);
+        border: 2px solid white;
+        border-radius: 20px;
+    }
+
+    #I-7 {
+        grid-column: 7;
+        grid-row: 8 /span 2;
+        position: absolute;
+        top: 0%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        height: 200%;
+        width: 99%;
+        background-color: rgb(193, 94, 94);
+        border: 2px solid white;
+        border-radius: 20px;
+        z-index: 9;
+    }
+
+    #A-15,
+
+    #C-12,
+    #C-17,
+
+    #E-2,
+    #E-7,
+    #F-16,
+    #F-20,
+    #G-11,
+    #H-2,
+    #L-7,
+    #M-12 {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 75%;
+        height: 75%;
+        background-color: rgb(55, 79, 255);
+        border: 2px solid white;
+        border-radius: 20px;
+
+    }
+
+    #C-18::after {
+        position: absolute;
+        top: 0;
+        left: 100%;
+
+        transform: translate(-50%, -50%);
+        width: 75%;
+        height: 75%;
+        background-color: rgb(55, 79, 255);
+        border: 2px solid white;
+        border-radius: 20px;
+        z-index: 9999;
+        content: "";
+
+    }
+
+    #F-2,
+    #G-2,
+    #H-2,
+    #I-2,
+    #J-2 {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 20px;
+        height: 20px;
+        width: 50%;
+        height: 50%;
+        background-color: rgb(31, 31, 31);
+        border-radius: 50%;
+        z-index: 1;
+        opacity: 1;
+    }
+
+}
+
+/* Route placements */
+#locations {
+
+    >div .c-6 {
+        display: grid;
+        place-items: center;
+
+        ::after {
+            margin: 0 auto;
+            content: "38";
+        }
+    }
+
+    >div .d-4 {
+        display: grid;
+        place-items: center;
+
+        ::after {
+            margin: 0 auto;
+            content: "39";
+        }
+    }
+
+    >div .g-2 {
+        display: grid;
+        place-items: center;
+
+        ::after {
+            margin: 0 auto;
+            content: "40";
+            color: white;
+
+        }
+    }
+
+    >div .i-2 {
+        display: grid;
+        place-items: center;
+
+        ::after {
+            margin: 0 auto;
+            content: "41";
+            color: white;
+        }
+    }
+
+    >div .j-17 {
+        display: grid;
+        place-items: center;
+
+        ::after {
+            margin: 0 auto;
+            content: "29";
+        }
+    }
+
+    >div .d-4 {
+        display: grid;
+        place-items: center;
+
+        ::after {
+            margin: 0 auto;
+            content: "39";
+        }
+    }
+
+    >div .h-17 {
+        display: grid;
+        place-items: center;
+
+        ::after {
+            margin: 0 auto;
+            content: "46";
+        }
+    }
+
+    >div .e-18 {
+        display: grid;
+        place-items: center;
+
+        ::after {
+            margin: 0 auto;
+            content: "45";
+        }
+    }
+
+    >div .b-15 {
+        display: grid;
+        place-items: center;
+
+        ::after {
+            margin: 0 auto;
+            content: "43";
+        }
+    }
+
+    >div .c-11 {
+        display: grid;
+        place-items: center;
+
+        ::after {
+            margin: 0 auto;
+            content: "42";
+        }
+    }
+
+    >div .d-9 {
+        display: grid;
+        place-items: center;
+
+        ::after {
+            margin: 0 auto;
+            content: "37";
+        }
+    }
+
+    >div .e-10 {
+        display: grid;
+        place-items: center;
+
+        ::after {
+            margin: 0 auto;
+            content: "36";
+        }
+    }
+
+    >div .e-14 {
+        display: grid;
+        place-items: center;
+
+        ::after {
+            margin: 0 auto;
+            content: "31";
+        }
+    }
+
+    >div .g-14 {
+        display: grid;
+        place-items: center;
+
+        ::after {
+            margin: 0 auto;
+            content: "30";
+        }
+    }
+
+    >div .m-10 {
+        display: grid;
+        place-items: center;
+
+        ::after {
+            margin: 0 auto;
+            content: "33";
+        }
+    }
+
+    >div .i-12 {
+        display: grid;
+        place-items: center;
+
+        ::after {
+            margin: 0 auto;
+            content: "32";
+        }
+    }
+
+    >div .k-7 {
+        display: grid;
+        place-items: center;
+
+        ::after {
+            margin: 0 auto;
+            content: "34";
+        }
+    }
+
+    >div .g-7 {
+        display: grid;
+        place-items: center;
+
+        ::after {
+            margin: 0 auto;
+            content: "35";
+        }
+    }
+
+    >div .c-16 {
+        display: grid;
+        place-items: center;
+
+        ::after {
+            margin: 0 auto;
+            content: "44";
+        }
+    }
+}
