--- a/info-kanto/kanto.css
+++ b/info-kanto/kanto.css
@@ -1,851 +1,5 @@
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: "Press Start 2P", system-ui;
-}
-
-body {
-    position: relative;
-    overflow-x: hidden;
-    background-color: rgb(30, 45, 118);
-
-}
-
-
-header {
-    width: 100%;
-    max-width: 50rem;
-    min-height: 10vh;
-
-    margin: 0 auto;
-
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    gap: 4rem;
-
-    a {
-        color: yellow;
-        text-decoration: none;
-    }
-}
-
-main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    max-width: 70%;
-    margin: 0 auto;
-}
-
-.overlay1 {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 15%;
-    height: 100%;
-    z-index: 999;
-    background: rgb(30, 45, 118);
-    background: -moz-linear-gradient(99deg, rgba(30, 45, 118, 1) 0%, rgba(30, 45, 118, 0.6666316184676996) 28%, rgba(255, 255, 255, 0) 100%);
-    background: -webkit-linear-gradient(99deg, rgba(30, 45, 118, 1) 0%, rgba(30, 45, 118, 0.6666316184676996) 28%, rgba(255, 255, 255, 0) 100%);
-    background: linear-gradient(99deg, rgba(30, 45, 118, 1) 0%, rgba(30, 45, 118, 0.6666316184676996) 28%, rgba(255, 255, 255, 0) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#1e2d76", endColorstr="#ffffff", GradientType=1);
-}
-
-.overlay2 {
-    position: absolute;
-    right: 0;
-    top: 0;
-    width: 15%;
-    height: 100%;
-    z-index: 999;
-    background: rgb(30, 45, 118);
-    background: -moz-linear-gradient(270deg, rgba(30, 45, 118, 1) 0%, rgba(30, 45, 118, 0.6666316184676996) 28%, rgba(255, 255, 255, 0) 100%);
-    background: -webkit-linear-gradient(270deg, rgba(30, 45, 118, 1) 0%, rgba(30, 45, 118, 0.6666316184676996) 28%, rgba(255, 255, 255, 0) 100%);
-    background: linear-gradient(270deg, rgba(30, 45, 118, 1) 0%, rgba(30, 45, 118, 0.6666316184676996) 28%, rgba(255, 255, 255, 0) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#1e2d76", endColorstr="#ffffff", GradientType=1);
-}
-
-.buttons {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    margin: 1rem 0;
-
-    button {
-        width: 100px;
-        padding: 5px 0;
-    }
-}
-
-.target {
-    width: 160px;
-    height: 220px;
-    outline: 3px solid red;
-    border-radius: 4px;
-    position: absolute;
-    left: 0;
-    z-index: 99;
-}
-
-#mainbox {
-    position: relative;
-    /* overflow-x: hidden; */
-
-    width: 100%;
-    height: auto;
-
-}
-
-#pokemon-carousel {
-    position: relative;
-    left: 0;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    gap: 1rem;
-
-    width: 100%;
-    /* max-width: 60rem; */
-    margin: 0 auto;
-
-    .pokecard {
-        background-color: rgb(245, 243, 243);
-        display: block;
-        flex-shrink: 0;
-        width: 160px;
-        height: 220px;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
-        text-decoration: none;
-        color: black;
-        position: relative;
-        border-radius: 6px;
-        padding: 10px 5px;
-        border: 3px solid #beab56;
-        transition: border 0.35s ease;
-        transition: transform 0.4s ease-in;
-
-    }
-
-    img {
-        margin-top: 25px;
-        width: 100%;
-        padding: 5px;
-        opacity: 0.65;
-        filter: grayscale(0.15);
-    }
-
-    p {
-        width: fit-content;
-        font-size: 0.8rem;
-        text-transform: capitalize;
-    }
-
-    .index {
-        position: absolute;
-        top: 5px;
-        left: 5px;
-        font-size: 0.6rem;
-        color: #202020
-    }
-}
-
-#pokemonDetails {
-    position: relative;
-    width: 100%;
-    min-height: 50vh;
-    padding: 2rem;
-    margin-top: 3rem;
-
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: flex-start;
-    gap: 1rem;
-
-    background-color: rgb(41, 62, 167);
-    border: 1px solid rgba(128, 128, 128, 0.367);
-    border-radius: 8px;
-    box-shadow: 3px 3px 9px rgba(45, 45, 45, 0.508);
-
-    #pokeId {
-        position: absolute;
-        top: 20px;
-        left: 20px;
-        color: white;
-    }
-}
-
-#pokeImg {
-    position: relative;
-    width: 100%;
-    height: 450px;
-
-
-
-    #image1,
-    #image2 {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-
-        opacity: 1;
-        transition: opacity 0.5s ease, box-shadow 0.5s ease;
-    }
-
-    #image1:hover {
-        opacity: 0;
-    }
-}
-
-#pokeInfo {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    gap: 1rem;
-
-    width: 100%;
-    height: 100%;
-    margin-top: 3rem;
-
-    color: white;
-
-    h2 {
-        text-transform: capitalize;
-    }
-
-    audio {
-        width: 150px;
-        height: 40px;
-        position: absolute;
-        top: 20px;
-        right: 20px;
-    }
-}
-
-audio::-webkit-media-controls-panel {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
-
-audio::-webkit-media-controls-timeline,
-audio::-webkit-media-controls-current-time-display,
-audio::-webkit-media-controls-time-remaining-display,
-audio::-webkit-media-controls-rewind-button,
-audio::-webkit-media-controls-fast-forward-button {
-    display: none !important;
-}
-
-
-#abilities {
-    width: 100%;
-    height: 90px;
-
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-    gap: 10px;
-
-    @media (max-width: 768px) {
-        font-size: 14px;
-
-        span {
-            font-size: 10px;
-        }
-    }
-
-    span {
-        color: yellow;
-    }
-
-    p {
-        color: white;
-        text-transform: uppercase;
-    }
-}
-
-#type-tainer {
-    width: 100%;
-    height: 50px;
-    position: relative;
-    /* left: 50%; */
-    /* transform: translateX(-50%); */
-    z-index: 2;
-
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-
-
-}
-
-.type {
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    height: 100%;
-    width: 140px;
-
-    img {
-        width: 100%;
-        max-width: 50px;
-    }
-}
-
-#locations {
-    width: 100%;
-    z-index: 2;
-    backdrop-filter: blur(3px);
-
-    background-color: rgba(15, 15, 15, 0.396);
-    border: 10px solid rgb(41, 62, 167);
-    border-radius: 8px;
-    box-shadow: 3px 3px 9px rgba(45, 45, 45, 0.508);
-
-    display: grid;
-    place-items: center;
-    padding: 25px;
-    margin-top: 2rem;
-
-    @media (max-width: 768px) {
-        padding: 3px;
-
-        display: none;
-    }
-
-    >div {
-        display: flex;
-
-        >div {
-            display: grid;
-            place-items: center;
-
-            width: 30px;
-            height: 30px;
-            background-color: transparent;
-            font-size: 12px;
-
-            position: relative;
-
-        }
-    }
-
-    .a-12,
-    .a-13,
-    .a-14,
-    .b-12,
-    .c-1,
-    .c-6,
-    .c-7,
-    .c-8,
-    .c-8,
-    .c-9,
-    .c-10,
-    .c-11,
-    .c-12,
-    .c-13,
-    .c-14,
-    .c-15,
-    .c-16,
-    .d-1,
-    .d-3,
-    .d-4,
-    .d-5,
-    .d-6,
-    .d-12,
-    .d-16,
-    .e-1,
-    .e-3,
-    .e-12,
-    .e-16,
-    .f-1,
-    .f-3,
-    .f-5,
-    .f-6,
-    .f-7,
-    .f-8,
-    .f-9,
-    .f-10,
-    .f-11,
-    .f-12,
-    .f-13,
-    .f-14,
-    .f-15,
-    .f-16,
-    .g-1,
-    .g-3,
-    .g-5,
-    .g-12,
-    .g-16,
-    .h-1,
-    .h-3,
-    .h-5,
-    .h-12,
-    .h-16,
-    .i-1,
-    .i-2,
-    .i-3,
-    .i-5,
-    .i-12,
-    .i-16,
-    .j-3,
-    .j-5,
-    .j-12,
-    .j-13,
-    .j-14,
-    .j-15,
-    .j-16,
-    .k-3,
-    .k-5,
-    .k-16,
-    .l-3,
-    .l-13,
-    .l-14,
-    .l-15,
-    .l-16,
-    .m-3,
-    .m-13,
-    .n-8,
-    .n-9,
-    .n-10,
-    .n-11,
-    .n-12,
-    .n-13,
-    .o-10,
-    .p-3 {
-        background-color: rgb(235, 221, 181);
-    }
-
-    /* seaways */
-    .l-5,
-    .k-5,
-    .m-5,
-    .n-5,
-    .n-6,
-    .n-7,
-    .n-3,
-    .o-3,
-    .p-4,
-    .p-5,
-    .p-7,
-    .p-8,
-    .p-9,
-    .p-10 {
-        background-color: aqua;
-        border: none;
-        color: white;
-        position: relative;
-        z-index: -2;
-    }
-
-    .l-5:before,
-    .k-5:before,
-    .m-5:before,
-    .n-5:before,
-    .n-6:before,
-    .n-7:before,
-    .n-3:before,
-    .o-3:before,
-    .p-4:before,
-    .p-5:before,
-    .p-7:before,
-    .p-8:before,
-    .p-9:before,
-    .p-10:before {
-        position: absolute;
-        background-color: black;
-        border-radius: 99%;
-        height: 50%;
-        width: 50%;
-        content: "";
-        z-index: -1;
-
-    }
-
-    /* CITIES */
-    .c-12,
-    .f-12,
-    .f-9,
-    .f-12,
-    .f-16,
-    .j-12,
-    .n-10,
-    .d-3,
-    .i-3,
-    .l-3,
-    .c-1,
-    .p-3 {
-        background-color: rgb(231, 134, 134);
-        border: 2px solid white;
-    }
-
-    /* forests */
-
-    .f-3 {
-        background-color: rgb(27, 214, 149);
-        border: 2px solid white;
-
-    }
-
-    /* caves */
-    .d-1,
-    .c-7,
-    .c-16 {
-        background-color: rgb(176, 156, 125);
-        border: 2px solid white;
-
-
-    }
-
-    /* island */
-
-    .p-6 {
-        background-color: rgb(24, 69, 160);
-        border: 2px solid white;
-
-
-    }
-
-
-    .targetAquired {
-        border: 4px dashed rgb(212, 28, 28);
-    }
-
-    .targetLegendary {
-
-        border: 4px dashed rgb(255, 17, 227);
-
-    }
-
-    .mt-moon {
-        position: relative;
-
-        &:after {
-            position: absolute;
-            top: -20px;
-            background-color: black;
-            content: "Mt.Moon";
-            color: white;
-            display: none;
-        }
-    }
-
-    .mt-moon:hover {
-        &:after {
-            display: block;
-
-        }
-    }
-
-    .cerulean-city-area {
-        position: relative;
-
-        &:after {
-            position: absolute;
-            top: -20px;
-            background-color: black;
-            content: "Cerulean City";
-            color: white;
-            display: none;
-        }
-    }
-
-    .cerulean-city-area:hover {
-        &:after {
-            display: block;
-
-        }
-    }
-
-    .rock-tunnel {
-        position: relative;
-
-        &:after {
-            position: absolute;
-            top: -20px;
-            background-color: black;
-            content: "Rock Tunnel";
-            color: white;
-            display: none;
-        }
-    }
-
-    .rock-tunnel:hover {
-        &:after {
-            display: block;
-
-        }
-    }
-
-    .Indigo-plateau {
-        position: relative;
-
-        &:after {
-            position: absolute;
-            top: -20px;
-            background-color: black;
-            content: "Indigo Plateau";
-            color: white;
-            display: none;
-        }
-    }
-
-    .Indigo-plateau:hover {
-        &:after {
-            display: block;
-
-        }
-    }
-
-    .victory-road {
-        position: relative;
-
-        &:after {
-            position: absolute;
-            top: -20px;
-            background-color: black;
-            content: "Victory road";
-            color: white;
-            display: none;
-        }
-    }
-
-    .victory-road:hover {
-        &:after {
-            display: block;
-
-        }
-    }
-
-    .viridian-forest-area {
-        position: relative;
-
-        &:after {
-            position: absolute;
-            top: -20px;
-            background-color: black;
-            content: "Viridian Forest";
-            color: white;
-            display: none;
-        }
-    }
-
-    .viridian-forest-area:hover {
-        &:after {
-            display: block;
-
-        }
-    }
-
-    .celadon-city-area {
-        position: relative;
-
-        &:after {
-            position: absolute;
-            top: -20px;
-            background-color: black;
-            content: "Celadon City";
-            color: white;
-            display: none;
-        }
-    }
-
-    .celadon-city-area:hover {
-        &:after {
-            display: block;
-
-        }
-    }
-
-    .saffron-city-area {
-        position: relative;
-
-        &:after {
-            position: absolute;
-            top: -20px;
-            background-color: black;
-            content: "Saffron City";
-            color: white;
-            display: none;
-        }
-    }
-
-    .saffron-city-area:hover {
-        &:after {
-            display: block;
-
-        }
-    }
-
-    .lavender-town-area {
-        position: relative;
-
-        &:after {
-            position: absolute;
-            top: -20px;
-            background-color: black;
-            content: "Lavender Town";
-            color: white;
-            display: none;
-        }
-    }
-
-    .lavender-town-area:hover {
-        &:after {
-            display: block;
-
-        }
-    }
-
-    .viridian-city-area {
-        position: relative;
-
-        &:after {
-            position: absolute;
-            top: -20px;
-            background-color: black;
-            content: "Viridian City";
-            color: white;
-            display: none;
-        }
-    }
-
-    .viridian-city-area:hover {
-        &:after {
-            display: block;
-
-        }
-    }
-
-    .vermilion-city-area {
-        position: relative;
-
-        &:after {
-            position: absolute;
-            top: -20px;
-            background-color: black;
-            content: "Vermilion City";
-            color: white;
-            display: none;
-        }
-    }
-
-    .vermilion-city-area:hover {
-        &:after {
-            display: block;
-
-        }
-    }
-
-    .pewter-city-area {
-        position: relative;
-
-        &:after {
-            position: absolute;
-            top: -20px;
-            background-color: black;
-            content: "Pewter City";
-            color: white;
-            display: none;
-        }
-    }
-
-    .pewter-city-area:hover {
-        &:after {
-            display: block;
-
-        }
-    }
-
-    .pallet-town {
-        position: relative;
-
-        &:after {
-            position: absolute;
-            top: -20px;
-            background-color: black;
-            content: "Pallet Town";
-            color: white;
-            display: none;
-        }
-    }
-
-    .pallet-town:hover {
-        &:after {
-            display: block;
-
-        }
-    }
-
-    .fuchsia-city-area {
-        position: relative;
-
-        &:after {
-            position: absolute;
-            top: -20px;
-            background-color: black;
-            content: "Fuchsia City & Safari-Zone";
-            color: white;
-            display: none;
-            z-index: 99;
-        }
-    }
-
-    .fuchsia-city-area:hover {
-        &:after {
-            display: block;
-
-        }
-    }
-
-    .cinnabar-island-area {
-        position: relative;
-
-        &:after {
-            position: absolute;
-            top: -20px;
-            background-color: black;
-            content: "Cinnabar Island";
-            color: white;
-            display: none;
-        }
-    }
-
-    .cinnabar-island-area:hover {
-        &:after {
-            display: block;
-
-        }
-    }
-
-    .seafoam-islands {
-        position: relative;
-
-        &:after {
-            position: absolute;
-            top: -20px;
-            background-color: black;
-            content: "Seafoam Island";
-            color: white;
-            display: none;
-        }
-    }
-
-    .seafoam-islands:hover {
-        &:after {
-            display: block;
-
-        }
-    }
-}
+@import url(./additional-css/kantoMap.css);
+@import url(../shared-css/abilities.css);
+@import url(../shared-css/type.css);
+@import url(../shared-css/audio.css);
+@import url(../shared-css/similar.css);
